feat: complete mahasiswa routes in swagger and add multer for klaim eksternal
